--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(150, 50, 50)">
             <div class="container-fluid">
-              <a class="navbar-brand" style="color:yellow;" href="#">McRonald</a>
+              <a class="navbar-brand" style="color:yellow;" href="#">Lance Troll</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -50,15 +50,15 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1600x600/?football,soccer
+            <img src="https://source.unsplash.com/1600x600/?car,race
             " class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x600/?ronaldo,goal
+            <img src="https://source.unsplash.com/1600x600/?ferrari,mercedes
             " class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x600/?champion,win
+            <img src="https://source.unsplash.com/1600x600/?redbull,race
             " class="d-block w-100" alt="...">
           </div>
         </div>
@@ -73,13 +73,13 @@
     </div>
 
     <div class="container px-4 py-5" id="custom-cards">
-      <h2 class="pb-2 border-bottom">Upcoming Matches</h2>
+      <h2 class="pb-2 border-bottom">Upcoming Races</h2>
   
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Manchester United Vs Liverpool</h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Mexican GP</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
                   <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
